--- a/templates/interest.html
+++ b/templates/interest.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <h1>Welcome {{keyword}}</h1>
-	<h1>Welcome {{category}}</h1>
+    <h1>Keyword: {{keyword}}</h1>
+	<h1>Category {{category}}</h1>
 
 </head>
 <body>
