--- a/templates/interest.html
+++ b/templates/interest.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <h1>Keyword: {{keyword}}</h1>
-	<h1>Category {{category}}</h1>
 
 </head>
+
 <body>
+<!-- keep the same cases !-->
+ <title>Title</title>
+    <h1>Keyword: {{keyword}}</h1>
+	<h1>Category: {{category}}</h1>
+
+<h2> Related Groups </h2>
+<!-- groups with same interests !-->
+<ul>
+	<ll> <a href = "/groups/" + {{name}} > {{name}} </a> </ll>
+	<ll> <a href = "/groups/" + {{name}} > {{name}} </a> </ll>
+	<ll> <a href = "/groups/" + {{name}} > {{name}} </a> </ll>
+
+
 
 </body>
+
 </html>
