commiting to this project

--- a/templates/interest.html
+++ b/templates/interest.html
@@ -14,8 +14,8 @@
 <h2> Related Groups </h2>
 <!-- groups with same interests !-->
 <ul>
-{%for line in group %} <!--with interest.category == group.category !-->
-	<ll> <a href = "/group/{{line.group_id}}" > {{line.name}} </a> </ll>
+{%for line in groups %} 
+	<li> <a href = "/group/{{line.group_id}}" > {{line.name}} </a> </li>
 {% endfor %}
 
 
