--- a/templates/event.html
+++ b/templates/event.html
@@ -10,9 +10,16 @@
 <p>{{event.description}}</p>
 
 <p>Starts at:{{event.start_time}}
-<br>
-    Ends at: {{event.end_time}}
+    <br>Ends at: {{event.end_time}}
     <br>Location: {{event.location_name}}, {{event.zipcode}}
+{% if signedup %}
+    <p>You've signed up for the event</p>
+{%else%}
+    <form action="/signup/{{event.event_id}}" method="POST">
+	<input type="submit" value = Signup />
+    </form>
+{% endif%}
+
 </p>
 
 </body>
