--- a/templates/interest.html
+++ b/templates/interest.html
@@ -1,9 +1,14 @@
+
+
 <!DOCTYPE html>
 <html>
 
+
 <head>
 
+
 </head>
+
 
 <body>
 <!-- keep the same cases !-->
@@ -11,16 +16,24 @@
     <h1>Keyword: {{keyword}}</h1>
 	<h1>Category: {{category}}</h1>
 
-<h2> Related Groups </h2>
+
+<h2> Related Groups and Events</h2>
 <!-- groups with same interests !-->
-<ul>
-{%for line in groups %} <!--with interest.category == group.category !-->
-	<li> <a href = "/group/{{line.group_id}}" > {{line.group_name}} </a> </li>
+{%for line in data %} <!--with interest.category == group.category !-->
+	<p> Group: </p> 
+	<a href = "/groups/{{line.group_id}}" > {{line.group_name}} </a> </li>	
+	<p> Event: </p>
+	<a href = "/events/{{line.event_id}}" > {{line.title}} </a></li> 
+	<p> {{line.description}} </p>
 {% endfor %}
-</ul>
+
+
 <!--TODO hook group up-->
 
 
+
+
 </body>
+
 
 </html>
