--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
 
 
 
-	<input type="submit" value = Register />
+	<input type="submit">
 	{% if error %}
 		<p class="error"><strong>Error:</strong> {{error}}</p>
 	{% endif %}
