--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,8 @@
 	}
 </style>
 
+<!-- This only shows up if the user is authorized??? -->
+<a href="/createEvent">Create an event</a>
 
 <form action="/eventSearch" method="POST">
 	<input type="submit" value="Search for events">
