--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,6 @@
 <head>
 </head>
 <body>
-<form action="/post" method="POST">
-	<h1>Welcome {{username}}</h1> 
-	<input type="text" name = "blog" placeholder="post" required/> </br>
-	<input type="submit" value = Post />
-</form>
 
 <style type="text/css">
 	table, th, td{
@@ -14,8 +9,12 @@
 	}
 </style>
 
+	<h1>Welcome {{username}}</h1>
+
+
 <!-- This only shows up if the user is authorized??? -->
 <a href="/createEvent">Create an event</a>
+<br>
 
 <form action="/eventSearch" method="POST">
 	<input type="submit" value="Search for events">
@@ -48,7 +47,7 @@
 
 <br>
 
-<h2>Event's you're signed up for</h2>
+<h2>Event's you're signed up for in the next 3 days</h2>
 <table>
 	<th>Title</th>
 	<th>Start Time</th>
