--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,4 @@
-e<html>
+<html>
 <head>
 </head>
 <body>
@@ -9,8 +9,7 @@ e<html>
 	<input type="text" name = "lastname" placeholder="lastname" required/> </br>
 	<input type="text" name = "email" placeholder="email" required/> </br>
 	<input type="number" name = "zipcode" placeholder="zipcode" required/> </br>
-
-
+	<input type="text" name = "color" placeholder="hex color"/> </br>
 
 
 	<input type="submit">
@@ -25,3 +24,4 @@ e<html>
 
 
 </html>
+
