--- a/templates/home.html
+++ b/templates/home.html
@@ -21,6 +21,8 @@
 <!-- This only shows up if the user is authorized??? -->
 <a href="/createEvent">Create an event</a>
 <br><br>
+<a href="/createGroup">Create a group</a>
+<br>
 
 <form action="/eventSearch" method="POST">
 	<input type="submit" value="Search for events">
