--- a/templates/createGroup.html
+++ b/templates/createGroup.html
@@ -3,7 +3,7 @@
 	<body>
 		<h3>CREATE A GROUP</h3>
 		<form action='createAGroup' method="POST">
-			<input type="text" name = "Group_ID" placeholder="Group ID" required/> </br>
+			<input type="number" name = "Group_ID" placeholder="Group ID" required/> </br>
 			<input type="text" name = "Group_Name" placeholder="Group Name" required/> </br>
 			<input type="text" name = "Description" placeholder="Description" required/> </br>
 			<input type="submit" value="Submit">
